Sample updatet to conform to the syndesis swagger spec